add frontend tests
